# law-encoder

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  audio.raw  encoded.ulaw
examples/: encode.rs  encode_file.rs  streaming_encode.rs
src/: encoder.rs  errors.rs  formats.rs  input_format.rs  lib.rs
src/utils/: downsampler.rs  mod.rs
