[package]
name = "law-encoder"
version = "0.1.0"
edition = "2021"
authors = ["Beric Bearnson <bericb@gmail.com>"]
description = "A library for encoding 16bit PCM to a-law and mu-law."
repository = ""
keywords = ["audio", "encoding", "alaw", "mulaw", "no_std"]
categories = ["encoding", "multimedia::audio", "no-std"]
exclude = ["audio.raw", "examples/"]

[lib]
name = "law_encoder"
path = "src/lib.rs"

[dependencies]
